[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=1]
[ext_resource path="res://src/UserInterface/TitleMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="TitleMenu" type="Control"]
margin_left = -2.0
margin_top = -4.0
margin_right = 803.0
margin_bottom = 486.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.145098, 0.145098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -102.0
margin_right = 162.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 402.0
margin_top = 202.0
margin_right = 702.0
margin_bottom = 487.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Let's Play"
align = 1
valign = 1

[node name="HBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 300.0
margin_bottom = 285.0
custom_constants/separation = 30

[node name="PlayButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Play"
script = ExtResource( 2 )

[node name="AboutGameButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 110.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "About"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_top = 140.0
margin_right = 240.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" to="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/AboutGameButton" to="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" method="_on_AboutGameButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/PlayButton" method="_on_QuitButton_pressed"]
